--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
         </activity>
 
         <activity android:name=".view.crul.CurlActivity">
+
+        </activity>
+
+        <activity android:name=".view.bookeffect.BookEffectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
