--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'org.greenrobot.greendao'
 //apply from: 'tinkerpatch.gradle'
 
 android {
@@ -29,6 +30,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 
+    compile'org.greenrobot:greendao:3.0.1'
+    compile'org.greenrobot:greendao-generator:3.0.0'
+
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
 
@@ -57,4 +61,13 @@ dependencies {
     compile 'com.github.bluejamesbond:textjustify-android:2.1.6'
 
     compile 'org.litepal.android:core:1.6.0'
+
+    //本项目
+    compile 'com.dhh:websocket:1.3.0'
+
+//由于项目是基于okhttp,RxJava,RxAndroid编写,所以还需加入如下依赖.
+//okhttp,RxJava,RxAndroid
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'io.reactivex:rxjava:1.3.1'
+    compile 'io.reactivex:rxandroid:1.2.1'
 }
