--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'io.reactivex:rxjava:1.3.1'
     compile 'io.reactivex:rxandroid:1.2.1'
+
+    compile 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
 }
