--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,11 @@ dependencies {
     compile 'io.reactivex:rxjava:1.3.1'
     compile 'io.reactivex:rxandroid:1.2.1'
 
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.alibaba:fastjson:1.1.55.android'
+    compile 'com.squareup.retrofit2:converter-gson:+'
+    compile 'com.google.code.gson:gson:+'
+
     compile 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
 }
